some drivers don't update during animation render #62817

Closed
opened 2019-03-21 15:54:57 +01:00 by Jurek · 11 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: 0bbff8a711
Worked: (optional)

Short description of error
driver put on influence of VertexWeightMix Modifer, and depended on other modifier's parameter updates only on preview but not during animation render

here is the blend file test.blend
and rendered animation to compare
AA0000-0025.mp4

In the rendered animation driver value clearly isn't updated by time.
rendering single frame works fine, as you have to go to that frame first which updates the driver.

Exact steps for others to reproduce the error

  1. Open blend file,
  2. preview viewport animation
  3. Render animation (took me 2 seconds)
  4. Compare the result
**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 51), branch: master, commit date: 2019-03-21 00:58, hash: `0bbff8a711` Worked: (optional) **Short description of error** driver put on influence of VertexWeightMix Modifer, and depended on other modifier's parameter updates only on preview but not during animation render here is the blend file [test.blend](https://archive.blender.org/developer/F6860864/test.blend) and rendered animation to compare [AA0000-0025.mp4](https://archive.blender.org/developer/F6860884/AA0000-0025.mp4) In the rendered animation driver value clearly isn't updated by time. rendering single frame works fine, as you have to go to that frame first which updates the driver. **Exact steps for others to reproduce the error** 1. Open blend file, 2. preview viewport animation 3. Render animation (took me 2 seconds) 4. Compare the result
Author

Added subscriber: @solartistic

Added subscriber: @solartistic
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Member

We've got a dependency cycle reported here:

Dependency cycle detected:
  'OBCube.GEOMETRY_EVAL_INIT()' depends on 'OBCube.DRIVER(modifiers["VertexWeightMix2"].mask_constant)' through 'Driver -> Driven Property'
  'OBCube.DRIVER(modifiers["VertexWeightMix2"].mask_constant)' depends on 'OBCube.GEOMETRY_EVAL()' through 'RNA Target -> Driver'
  'OBCube.GEOMETRY_EVAL()' depends on 'OBCube.GEOMETRY_EVAL_INIT()' through 'Object Geometry UberEval'

not sure if the second line is really neccessary / could be made working without actually reporting a dependency cycle?
the driver variable wants to pick up a RNA value, so shouldnt neccessarily be dependent on GEOMETRY_EVAL?
(but I am still not too familiar with the DEG, so maybe @Sergey would know right away?)

We've got a dependency cycle reported here: ``` Dependency cycle detected: 'OBCube.GEOMETRY_EVAL_INIT()' depends on 'OBCube.DRIVER(modifiers["VertexWeightMix2"].mask_constant)' through 'Driver -> Driven Property' 'OBCube.DRIVER(modifiers["VertexWeightMix2"].mask_constant)' depends on 'OBCube.GEOMETRY_EVAL()' through 'RNA Target -> Driver' 'OBCube.GEOMETRY_EVAL()' depends on 'OBCube.GEOMETRY_EVAL_INIT()' through 'Object Geometry UberEval' ``` not sure if the second line is really neccessary / could be made working without actually reporting a dependency cycle? the driver variable wants to pick up a RNA value, so shouldnt neccessarily be dependent on GEOMETRY_EVAL? (but I am still not too familiar with the DEG, so maybe @Sergey would know right away?)
Member

note: as a workaround, you could (instead of animating one modifier and driving the second one from the first modifier) do the following:

  • move the animation from the first modifier e.g. to an empties Z location
  • drive the first modifier by this empties Z location
  • drive the second modifier by the empties Z location as well (1-var)

this wont result in a dependency cycle and renders fine, see:
#62817.blend

note: as a workaround, you could (instead of animating one modifier and driving the second one from the first modifier) do the following: - move the animation from the first modifier e.g. to an empties Z location - drive the first modifier by this empties Z location - drive the second modifier by the empties Z location as well (1-var) this wont result in a dependency cycle and renders fine, see: [#62817.blend](https://archive.blender.org/developer/F6864353/T62817.blend)

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-23 18:19:04 +01:00

We usually close dependency cycle issues, but I just want to make sure that this is working as intended.

@lichtwerk thanks for providing an alternate fix.

We usually close dependency cycle issues, but I just want to make sure that this is working as intended. @lichtwerk thanks for providing an alternate fix.

This issue was referenced by ba2a81bcf1

This issue was referenced by ba2a81bcf18236cd79a996a8cc31429ffbc4b566

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @gurlaldeep

Added subscriber: @gurlaldeep

I am having the same problem with blender 2.82a

I am having the same problem with blender 2.82a

@gurlaldeep, the file from this report still seems to work. If you're experiencing an issue please submit a new report with all the information requested.

@gurlaldeep, the file from this report still seems to work. If you're experiencing an issue please submit a new report with all the information requested.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62817
No description provided.